# django-grouper

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deptry.yml  djlint.yml  linters.yml  publish.yml  release-please.yml  ruff-linter.yml
django_grouper/: signals.py  urls.py  utils.py  views.py
django_grouper/templates/django_grouper/: group.html  grouper.html
