[project]
name = "django-grouper"
version = "0.4.0"
description = "Group Django objects by similarity"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at" }]
readme = "README.md"
license = "MIT"
dependencies = [
  "scikit-learn>=1.5.0",
  "django>=3"
]
[project.urls]
source = "https://github.com/acdh-oeaw/django-grouper"
changelog = "https://github.com/acdh-oeaw/django-grouper/blob/main/CHANGELOG.md"
issues = "https://github.com/acdh-oeaw/django-grouper/issues"

[tool.uv]
dev-dependencies = [
  "ruff>=0.4.8",
  "djlint>=1.31.1",
  "deptry>=0.16.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.deptry.package_module_name_map]
scikit-learn = "sklearn"
